tests/negative/test_switch_case_no_colon.orb
fnc main() {
    switch (1) {
    case 1 ret;
    }
}